# quality-tree-module

./: .gitignore  .markdownlint.json  .output.txt  GEMINI.md  agents.md  generate_slides.py  overview.md  pyproject.toml  readme.md
.github/workflows/: deploy.yml
docs/: index.html  overview.md  test_diagram.mmd
docs/Mod 0 - Introduction/: intro-overview.mmd  learning-objectives.mmd  slides.md  vague-to-concrete.mmd  workshop-journey.mmd
docs/Mod 1 - Anatomy of Quality/: module-1-mindmap.mmd  quality-refinement-scenario.mms  slides.md
docs/Mod 2 - Drafting the Tree/: checkout-qas.mmd  healthcare-qas.mmd  iot-qas.mmd  module-2-mindmap.mmd  slides.md  streaming-qas.mmd
docs/Mod 3 - Prioritization & Impact/: module-3-mindmap.mmd  slides.md
docs/Mod 3 - Prioritization & Impact/prioritising quality requirements/: Scenario 1.md  Scenario 2.md  Scenario 3.md  Scenario 4.md  Scenario 5.md  Scenario 6.md  exemplar answer 1.md  exemplar answer 2.md  exemplar answer 3.md  exemplar answer 4.md  exemplar answer 5.md  exemplar answer 6.md
docs/Mod 4 - Variants & Evolution/: maintenance-tree.mmd  module-4-mindmap.mmd  risk-storming-tree.mmd  security-compliance-tree.mmd  slides.md  utility-tree.mmd
docs/Mod 4 - Variants & Evolution/case-study/: scenario.md  solution.md
docs/Mod 5 - Operationalizing the Tree/: module-5-mindmap.mmd  slides.md
jinja_templates/: slide_template.html.jinja
quality_tree_module.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
styles/: main.css  main.css.map  main.scss
templates/: Markdown.md  Mermaid.mmd
