[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quality-tree-module"
version = "0.1.0"
description = "Workshop materials and slide generator for Quality Trees and architecture training"
readme = "readme.md"
authors = [ { name = "Lead Developer", email = "dev@example.com" } ]
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "markdown>=3.7",
]

[project.scripts]
generate-slides = "generate_slides:main"

[tool.setuptools]
package-dir = { "" = "." }
